--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ dist-ssr
 *.sw?
 
 # Ignore .env
-.env                # loaded in all cases
-.env.local          # loaded in all cases, ignored by git
-.env.[mode]         # only loaded in specified mode
-.env.[mode].local   # only loaded in specified mode, ignored by git
+.env                
+.env.local          
+.env.[mode]         
+.env.[mode].local   
