--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,6 @@ dist-ssr
 
 # Ignore .env
 .env                
-.env.local          
-.env.[mode]         
-.env.[mode].local   
+# .env.local          
+# .env.[mode]         
+# .env.[mode].local   
