--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ dist-ssr
 *.sw?
 
 # Ignore .env
-.env                
+.env.local              
 # .env.local          
 # .env.[mode]         
 # .env.[mode].local   
